--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="eaglercraft-logo-idea-v0-9j9jcn3cc71d1.png" alt="EaglerLogo" width="350"><br><br>
+    <img src="logo.png" alt="EaglerLogo" width="350"><br><br>
     <label for="version">Choose a Version:</label><br>
     <div class="container">
     <select name="Version" id="version">     
