--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <option value="1.5.2">1.5.2</option>
       <option value="Beta">Beta</option>
       <option value="Indev">Indev</option>
+      <p>select to get value:</p>
     </select>
       
       </div>
