--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <option value="1.5.2">1.5.2</option>
       <option value="Beta">Beta</option>
       <option value="Indev">Indev</option>
-      <p>select to get value:</p>
     </select>
-      
+     <p>select to get value:</p>
       </div>
+    <script src="getselect.js"></script>
+    <button onclick="fun(runselect.js)">Launch</button>
   </body>
 </html>
