--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
      <p>select to get value:</p>
       </div>
     <script src="getselect.js"></script>
-    <button onclick="fun(runselect.js)">Launch</button>
+    <script>
+function runSelect() {
+      s = 'h2';
+function openTab(String l) {
+  window.open(l, "_blank");
+}
+if (s=1){
+  openTab("https://m.eaglercraft.com/mc/1.8.8/?userscript=irv77-eaglercraft-mobile.js")
+}
+if (s=2){
+  openTab("https://m.eaglercraft.com/mc/1.5.2/?userscript=irv77-eaglercraft-mobile.js")
+}
+if (s=3){
+  openTab("https://m.eaglercraft.com/mc/b1.7.3/?userscript=irv77-eaglercraft-mobile.js")
+}
+if (s=4){
+  openTab("https://m.eaglercraft.com/mc/indev/?userscript=irv77-eaglercraft-mobile.js")
+}
+}
+</script>
+    <button onclick="runSelect()">Launch</button>
   </body>
 </html>
