--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ function populate(s1, s2){
   s2 = document.getElementById(s2);
   s2.innerHTML = "";
   if (s1.value == "1.8.8"){
-    href = https://m.eaglercraft.com/mc/1.8.8/?userscript=irv77-eaglercraft-mobile.js
+    href = m.eaglercraft.com/mc/1.8.8/?userscript=irv77-eaglercraft-mobile.js
   }
 }   
     </script>
