--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ function populate(s1, s2){
   if (s1.value == "1.8.8"){
     href = m.eaglercraft.com/mc/1.8.8/?userscript=irv77-eaglercraft-mobile.js
   }
-}   
+}  
+      //helppp
     </script>
   </head>
   <body>
